2023-10-03	Richard Watts	<richard@zilliqa.com>

	* index.ts: A new hre.setScillaDefaults() allowing you to change the default gasPrice, gasLimit, timeout and attempts
	* ZilliqaHardhatObject.ts: getDefaultAccount() allows you to retrieve the default signing account.
	