@@ -13,6 +13,7 @@ import {
   setAccount
 } from "./ScillaContractDeployer";
 import { loadScillaContractsInfo } from "./ScillaContractsInfoUpdater";
+import { contractFromAddress } from "./ScillaContractInteractor";
 import "./task-extensions";
 // This import is needed to let the TypeScript compiler know that it should include your type
 // extensions in your npm package's types file.
@@ -42,6 +43,14 @@ extendEnvironment((hre) => {
   hre.setScillaDefaults = lazyFunction(
     () => (params) => {
       return updateSetup(params);
+    }
+  );
+
+  hre.interactWithScillaContract = lazyFunction(
+    () => async(
+      contractAddress: string
+    ) : Promise<ScillaContract | undefined> => {
+      return contractFromAddress(hre, contractAddress);
     }
   );
 
